# playcaller

./: LICENSE  README.md  README_ja.md  package.json
.github/workflows/: bump-and-publish.yml
Editor/: CommandRouter.cs  PlayCallerInput.cs  PlayCallerServer.cs  Playcaller.Editor.asmdef  PlaycallerClient.cs  PlaycallerGameBridge.cs  PlaycallerSetupMenu.cs
Editor/Handlers/: ConsoleLogHandler.cs  EditorStateHandler.cs  GameObjectHandler.cs  GameQueryHandler.cs  GameViewHandler.cs  HierarchyHandler.cs  InputSimulationHandler.cs  KeyInputHandler.cs  MenuItemHandler.cs  PlayModeHandler.cs  RefreshHandler.cs  ScreenshotHandler.cs  WaitHandler.cs
Editor/Models/: PlayCallerCommand.cs  PlayCallerResponse.cs  PlaycallerCommand.cs  PlaycallerResponse.cs
Server~/: package-lock.json  package.json  pyproject.toml  server.py  tsconfig.json
Server~/src/: index.ts  server.ts  unity-connection.ts
Server~/src/playcaller/: server.py
Server~/src/tools/: console-log.ts  drag.ts  flick.ts  playmode.ts  screenshot.ts  tap.ts  wait.ts
